Rename JEI compat classes, Fix can't Electric Blast Furnace transfer Item in JEI